# opt_note

./: .gitignore  README.md  bokuwata_quiz.py  flake.nix  ipynb_to_md.sh  marimo.sh  pyproject.toml  pyrefly.toml  run.sh  with_prompt_and_quote.tpl
docs/: index.html  opt_note.html  search.js
docs/opt_note/: scsp.html
docs/opt_note/scsp/: example.html  model.html  util.html
docs/scsp/: index.html
docs/scsp/example/: index.html
docs/scsp/model/: index.html
docs/scsp/util/: index.html
notebooks/: README.md  assign.ipynb  boolean_operation.ipynb  boolean_operation.py  equation_holds.ipynb  ipynb_to_md.sh  maximal_knapsack.ipynb  maximal_knapsack.py  partition.ipynb  sheet.ipynb  starrail_quiz.ipynb  starrail_quiz.py  try_marimo.ipynb  try_marimo.py  try_mathopt.ipynb
notebooks/jupyter/: equation_holds.ipynb  maximal_knapsack.ipynb  starrail_quiz.ipynb
notebooks/marimo/: assign.py  bokuwata_quiz.py  boolean_operation.py  equation_holds.py  maximal_knapsack.py  sheet.py  starrail_quiz.py  try_marimo.py
notebooks/misc/: boolean_operation.py  equation_holds.py  maximal_knapsack.py
notebooks/misc/__marimo__/: sheet.ipynb
notebooks/scsp/: README.md
notebooks/scsp/data/: example  generate.md  generate.py
notebooks/scsp/memo/: automaton_cpsat_test.md  automaton_cpsat_test.py  dr_alphabet_didp.md  dr_alphabet_didp.py  la_sh_didp.md  la_sh_didp.py  la_sw.md  la_sw.py  linear2_cpsat.md  linear2_cpsat.py  linear_cpsat_test.md  linear_cpsat_test.py  linear_hexaly_test.md  linear_hexaly_test.py  milp_another.md  milp_another.py  tsp_cpsat.md  tsp_cpsat.py  wmm_hexaly2.md  wmm_hexaly2.py  wmm_hexaly_max.md  wmm_hexaly_max.py
notebooks/scsp/model/: make_doc.sh
notebooks/scsp/wip/: automaton_cpsat_test.md  automaton_cpsat_test.py  scip_test.md  (+1 more)
src/: README.md  bokuwata_quiz.py  boolean_operation.md  equation_holds.py  maximal_knapsack.py  sheet.py
src/__marimo__/: bokuwata_quiz.ipynb  boolean_operation.ipynb  boolean_operation.md  equation_holds.ipynb  equation_holds.md  maximal_knapsack.ipynb  maximal_knapsack.md  sheet.ipynb  sheet.md
src/opt_note/: __init__.py
src/scsp/: README.md  generate.py  model_alphabet.py  model_automaton_cpsat.md  model_automaton_cpsat.py  model_automaton_cpsat_sat.py  model_descending.py  model_didp.md  model_didp.py  model_didp2.md  model_didp2.py  model_dp.md  model_dp.py  model_hexaly.py  model_ibs_scs.py  model_la_sh.py  model_linear_cpsat.md  model_linear_cpsat.py  model_linear_highs.md  model_linear_highs.py  model_linear_scip.py  model_mm.md  model_mm.py  model_wmm.md  model_wmm.py  model_wmm_hexaly.md  model_wmm_hexaly.py  my_instance.md  my_instance.py
(+333 files in other folders)
