[project]
name = "opt-note"
version = "0.1.0"
description = "Mathematical optimization study note"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "didppy>=0.10.0",
    "hexaly>=14.0.20251112",
    "highspy>=1.12.0",
    "ortools>=9.14.6206",
    "pyscipopt>=6.0.0",
]

[dependency-groups]
dev = [
    "marimo[lsp]>=0.18.2",
    "pdoc>=16.0.0",
    "taskipy>=1.14.1",
]

[[tool.uv.index]]
name = "hexaly"
url = "https://pip.hexaly.com"
explicit = true

[tool.uv.sources]
hexaly = { index = "hexaly" }

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.marimo.runtime]
pythonpath = ["src"]

[tool.taskipy.tasks]
doc = "rm -rf docs && pdoc opt_note --output-directory docs --math --docformat google"

[tool.taskipy.settings]
cwd = "."
