[project]
name = "opt-note"
version = "0.1.0"
description = "Mathematical optimization study note"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "didppy>=0.10.0",
    "hexaly>=14.5.20260326",
    "highspy>=1.14.0",
    "ortools>=9.15.6755",
    "pyscipopt>=6.1.0",
]

[dependency-groups]
dev = [
    "marimo[lsp]>=0.23.0",
    "pdoc>=16.0.0",
    "taskipy>=1.14.1",
]

[[tool.uv.index]]
name = "hexaly"
url = "https://pip.hexaly.com"
explicit = true

[tool.uv.sources]
hexaly = { index = "hexaly" }

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.marimo.runtime]
pythonpath = ["src"]

[tool.taskipy.tasks]
doc = "rm -rf docs && pdoc opt_note --output-directory docs --math --docformat google"
doc-serve = "pdoc opt_note --math --docformat google --host 0.0.0.0"

[tool.taskipy.settings]
cwd = "."
